# hybrid-rag

./: .gitignore  README.md
rag-frontend/: index.html  package-lock.json  package.json  vite.config.ts
rag-frontend/src/: App.tsx  helper.ts  index.css
rag-frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  CodeBlock.tsx  RiskCard.tsx  SourceBadge.tsx  ThinkingIndicator.tsx
rag-frontend/src/components/home/: HeroSection.tsx
rag-frontend/src/components/icons/: MaterialIcon.tsx
rag-frontend/src/components/layout/: MemoryModal.tsx  MemoryToast.tsx  SideNavBar.tsx  TopAppBar.tsx
rag-frontend/src/hooks/: useChat.ts  useConversations.ts  useDocuments.ts  useMemory.ts
rag-frontend/src/pages/: ChatPage.tsx  HomePage.tsx
rag-frontend/src/services/: api.ts
rag-frontend/src/types/: types.ts
rag_backend/: db.py  main.py  pyproject.toml  test.py
rag_backend/models/: conversations.py  message.py  user_profile.py
rag_backend/routes/: chat.py  conversation.py  documents.py  profile.py
rag_backend/schemas/: chat.py  title_update.py  user_profile_update.py
rag_backend/services/: agent_service.py  chat_service.py  embedding_service.py  ingestion_service.py  memory_agent_service.py  memory_events.py
