[project]
name = "rag_backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb>=1.5.9",
    "ddgs>=9.14.4",
    "docling>=2.92.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.1",
    "google-genai>=1.75.0",
    "greenlet>=3.5.0",
    "pydantic-ai>=1.91.0",
    "python-multipart>=0.0.27",
    "sqlalchemy>=2.0.49",
    "sympy>=1.14.0",
]
